--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   },
   "devDependencies": {
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "prettier": "2.7.1",
+    "sass": "1.55.0"
   }
 }
